[NSS - QMM019] Create change

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/index.xhtml
@@ -109,7 +109,7 @@
                             <div id="A3_6" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM019_17')}</div>
                             <!-- 開始年月日 -->
                             <label id="A3_7" data-bind="text: startMonthText"></label>
-                            <label> ～ </label>
+                            <label>#{i18n.getText('QMM019_75')}</label>
                             <!-- 終了年月日 -->
                             <label id="A3_8" data-bind="text: endMonthText"></label>
                         </div>
