--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -141,7 +141,7 @@
                         <div class="table table-col-2">
                             <div class="cell valign-center">
                                 <!--D5_1-->
-                                <div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM019_132')}</div>
+                                <div data-bind="ntsFormLabel: {  }">#{i18n.getText('QMM019_132')}</div>
                             </div>
                             <div class="cell valign-center">
                                 <!--D5_2-->
