QMM017 update CR for input negative number, calculate via aspose cells

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
@@ -135,13 +135,11 @@
                             value: currencyValue,
                             constraint: 'SalaryUnitPrice',
                             required: true,
-                            name: '#[QMM041_18]',
-                            enable: currencyEnable,
                             option: {
-                                grouplength: 3,
-                                decimallength: 2,
-                                currencyformat: 'JPY'
-                                }
+                                decimallength: 2
+                                },
+                            name: '#[QMM041_18]',
+                            enable: currencyEnable
                             }"
                         />
                     </div>
