--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -4,89 +4,91 @@
                 xmlns:com="http://xmlns.jcp.org/jsf/component"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
     <div style="min-width: 550px">
-        <div class = "tab-row" data-bind="with: selectedFormula">
+        <div class="tab-row" data-bind="with: selectedFormula">
             <div style="width: 130px; display: inline-block;"
                  data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_8')}</div>
-            <div style="display: inline-block;"
-                 data-bind="text: formulaCode"></div>
+            <div style="display: inline-block;" data-bind="text: formulaCode"/>
             <span style="margin-left: 20px; width: 270px; vertical-align: text-bottom " class="limited-label"
-                  data-bind="text: formulaName"></span>
+                  data-bind="text: formulaName"/>
         </div>
-        <div class = "tab-row">
+        <div class="tab-row">
             <div style="width: 130px; display: inline-block;"
                  data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_23')}</div>
-            <div style="display: inline-block;"
-                 data-bind="text: basicFormulaSetting().displayMasterUse"></div>
+            <div style="display: inline-block;" data-bind="text: basicFormulaSetting().displayMasterUse"/>
         </div>
-        <hr></hr>
+        <hr/>
         <!--C2_1-->
-        <table id = "C2_1">
+        <table id="C2_1">
             <colgroup>
-                <col width="250px" />
-                <col width="140px" />
-                <col width="390px" />
+                <col width="250px"/>
+                <col width="140px"/>
+                <col width="390px"/>
             </colgroup>
             <thead>
-                <tr data-bind = "with: masterBasicCalculationFormula">
-                    <th class = "ui-widget-header">
-                        <span style="white-space: pre-line">#{i18n.getText('QMM017_30')}</span>
-                        </th>
-                    <th>
-                        <!--C2_3-->
-                        <div id  = "C2_7" class="cf switch-button" tabindex="11" data-bind="ntsSwitchButton: {
+            <tr data-bind="with: masterBasicCalculationFormula">
+                <th class="ui-widget-header">
+                    <span style="white-space: pre-line">#{i18n.getText('QMM017_30')}</span>
+                </th>
+                <th>
+                    <!--C2_3-->
+                    <div id="C2_3" class="cf switch-button" tabindex="11" data-bind="ntsSwitchButton: {
 									name: '#[QMM017_36]',
 									options: calculationFormulaFixedFormulaItem,
 									optionsValue: 'value',
 									optionsText: 'name',
 									value: calculationFormulaClassification,
-									required: true }"></div>
-                    </th>
-                    <th>
-                        <!--C2_6-->
-                        <div data-bind = "visible: calculationFormulaClassification() == 0">
-                            <input tabindex="12" data-bind="ntsNumberEditor: {
+									required: true }"/>
+                </th>
+                <th>
+                    <!--C2_6-->
+                    <div data-bind="visible: calculationFormulaClassification() == 0">
+                        <input tabindex="12" data-bind="ntsNumberEditor: {
                                 value: basicCalculationFormula,
                                 constraint: 'FixedAmount',
                                 name: '#[QMM017_32]',
                                 option: {
                                     decimallength: 3
                                 },
-                                required: true,
+                                required: false,
                                 enable: calculationFormulaClassification() == 0
-                                }" />
-                        </div>
-                        <div data-bind = "if: calculationFormulaClassification() == 1">
-                            <!--C2_7; C2_8-->
-                            <button class = "small master-config-button" data-bind = "click: function(){$vm.doMasterConfiguration()}" tabindex="13">#{i18n.getText('QMM017_27')}</button>
-                            <div style = "display: inline-block" data-bind = "text: displaySetting"></div>
-                        </div>
-                    </th>
-                </tr>
+                                }"/>
+                    </div>
+                    <div data-bind="if: calculationFormulaClassification() == 1">
+                        <!--C2_7; C2_8-->
+                        <button class="small master-config-button"
+                                data-bind="click: function(){$vm.doMasterConfiguration()}"
+                                tabindex="13">#{i18n.getText('QMM017_27')}</button>
+                        <div style="display: inline-block" data-bind="text: displaySetting"/>
+                    </div>
+                </th>
+            </tr>
             </thead>
-            <tbody></tbody>
+            <tbody/>
         </table>
         <!--C3_1-->
-        <div style = "margin-top: 25px;" >
-            <table id = "C3_1">
+        <div style="margin-top: 25px;">
+            <table id="C3_1">
                 <colgroup>
-                    <col width="250px" />
-                    <col width="230px" />
-                    <col width="300px" />
+                    <col width="250px"/>
+                    <col width="230px"/>
+                    <col width="300px"/>
                 </colgroup>
                 <thead>
                 <tr>
-                    <th class = "ui-widget-header" >
-                        <div data-bind = "text: $vm.basicFormulaSetting().branchCondition"></div>
+                    <th class="ui-widget-header">
+                        <div data-bind="text: $vm.basicFormulaSetting().branchCondition"/>
                     </th>
-                    <th colspan="2" class = "ui-widget-header">
-                        <button class = "small" tabindex="14" data-bind = "click: $vm.setAllFixedValue">#{i18n.getText('QMM017_34')}</button>
-                        <button class = "small" tabindex="15" data-bind = "click: $vm.setAllCalculationFormula">#{i18n.getText('QMM017_35')}</button>
+                    <th colspan="2" class="ui-widget-header">
+                        <button class="small" tabindex="14"
+                                data-bind="click: $vm.setAllFixedValue">#{i18n.getText('QMM017_34')}</button>
+                        <button class="small" tabindex="15"
+                                data-bind="click: $vm.setAllCalculationFormula">#{i18n.getText('QMM017_35')}</button>
                     </th>
                 </tr>
                 </thead>
                 <tbody data-bind="foreach: basicCalculationFormulaList">
                 <tr>
-                    <td data-bind="text: masterUseName"></td>
+                    <td data-bind="text: masterUseName"/>
                     <td>
                         <!--C3_6-->
                         <div class="cf switch-button" tabindex="16" data-bind="ntsSwitchButton: {
@@ -95,11 +97,11 @@
 									optionsValue: 'value',
 									optionsText: 'name',
 									value: calculationFormulaClassification,
-									required: true }"></div>
+									required: true }"/>
                     </td>
                     <td>
                         <!--C3_10-->
-                        <div data-bind = "visible: calculationFormulaClassification() == 0">
+                        <div data-bind="visible: calculationFormulaClassification() == 0">
                             <input tabindex="17" data-bind="ntsNumberEditor: {
                                 value: basicCalculationFormula,
                                 constraint: 'FixedAmount',
@@ -107,21 +109,21 @@
                                 option: {
                                     decimallength: 3
                                 },
-                                required: true,
+                                required: false,
                                 enable: calculationFormulaClassification() == 0
-                                }" />
+                                }"/>
                         </div>
-                        <div data-bind = "visible: calculationFormulaClassification() == 1">
+                        <div data-bind="visible: calculationFormulaClassification() == 1">
                             <!--C3_11-->
-                            <button class = "small" data-bind = "click: function(){$vm.doConfiguration($index())}" tabindex="18">#{i18n.getText('QMM017_27')}</button>
+                            <button class="small" data-bind="click: function(){$vm.doConfiguration($index())}"
+                                    tabindex="18">#{i18n.getText('QMM017_27')}</button>
                             <!--C3_12-->
-                            <div style = "display: inline-block" data-bind = "text: displaySetting"></div>
+                            <div style="display: inline-block" data-bind="text: displaySetting"/>
                         </div>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
-
     </div>
 </ui:composition>
