--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/001/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/001/a/index.xhtml
@@ -76,7 +76,7 @@
 					<div id="history" class="cf">
 						<button tabindex="6" id="A2_9"
 								data-bind="click: openDialogB, enable: isOpenDialogB(), timeClick: 600">#{i18n.getText('QMM001_10')}</button>
-						<button style="float: right" tabindex="7" id="A2_10" class="danger"
+						<button style="float: right" tabindex="7" id="A2_10" 
 								data-bind="click: openDialogC, enable: isOpenDiaLogC(), timeClick: 600 ">#{i18n.getText('QMM001_11')}</button>
 					</div>
 					<!-- History place -->
