--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -194,7 +194,7 @@
                                     visibleItemsCount: 2,
                                     value: workingAtr,
                                     optionsText: 'name',
-                                    required: true,
+                                    required: false,
                                     selectFirstIfNull: false,
                                     columns: [
                                         { prop: 'name', length: 10 },
