--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/qmm025.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/qmm025.a.style.css
@@ -44,6 +44,14 @@
     margin-bottom: 10px;
 }
 
+#grid .ntsCheckBox {
+    padding: 2px 5px 3px 4px;
+}
+
+#grid .ntsCheckBox span.box {
+    height: 20px;
+}
+
 #grid .delete {
     background-color: #ff0000;
 }
