--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
@@ -29,8 +29,8 @@
 			<div style="margin-top: 20px; min-width: 550px">
 				<div style="width: 130px;"
 					 data-bind="ntsFormLabel: {required: true}" >#{i18n.getText('QMM016_79')}</div>
-				<div style="width: 437px; display: inline-flex; position: absolute; left: 153px; top: 123px">
-					<div id="J3_2" tabindex="1" style="padding-top: 7px; width: 436px"
+				<div style="width: 437px; display: inline-flex; position: absolute; left: 145px; top: 140px">
+					<div id="J3_2" tabindex="1" style="width: 437px"
 						 data-bind="ntsRadioBoxGroup: {
 										value: modifyMethod,
 										enable: isLastHistory,
@@ -39,7 +39,7 @@
 										optionsText: 'name'}"></div>
 
 				</div>
-				<span style = "position: absolute; z-index: -1; margin-top: 27px; margin-left: 13px; width: 435px;" class="label warning tab-row">#{i18n.getText('QMM016_80')}</span>
+				<span style = "position: absolute; z-index: -1; margin-top: 37px; margin-left: 5px; width: 435px;" class="label warning tab-row">#{i18n.getText('QMM016_80')}</span>
 				<div style="margin-top: 100px; margin-left: 150px;  min-width: 420px">
 					<div style="width: 100px; display: inline-block"
 						 data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_75')}</div>
