--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/qmm016.h.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/h/qmm016.h.style.css
@@ -1,10 +1,10 @@
 #content-left {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 10px;
 }
 .fixed-flex-layout > .fixed-flex-layout-left {
     margin-right: -10px;
 }
-#fixed-flex-layout-right {
-    margin-top: 10px;
+#swap-list-search-area-input {
+	width: 220px !important;
 }
