--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -7,6 +7,10 @@
 <body>
 <ui:composition template="/master/dialog.xhtml">
     <ui:define name="htmlHead">
+        <com:ValidatorScript>
+            nts.uk.ctx.pr.core.dom.monthlysalary.payrolldata.DetailAmountType
+            nts.uk.ctx.pr.core.dom.wageprovision.statementlayout.CommonAmount
+        </com:ValidatorScript>
         <script type='text/javascript'>
             var dialogSize = {
                 width: 1250,
