--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -18,7 +18,7 @@
     <div style="margin-top: 15px; min-width: 1000px;" class="contents-area " >
         <div id="com-ccg001"></div>
         <div id = "H1_1" style="margin-left: 70px; ">
-            <div  id="emp-component" style="margin-left: 10px;"></div>
+            <div  tabindex = "6" id="emp-component" style="margin-left: 10px;"></div>
         </div>
   <!--      <div id="H1_2">
 
