--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/b/index.xhtml
@@ -14,7 +14,7 @@
    			<!-- B1_2 -->
    			<button class="danger" tabindex="2" data-bind="click: removeWorkplace, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
    			
-   			<button tabindex="3" id="print-button_1" data-bind="click: opencdl028Dialog2">#{i18n.getText('KSM004_100')}</button>
+   			<button tabindex="3" style="margin-top: 7px;"  id="print-button_1" data-bind="click: opencdl028Dialog2">#{i18n.getText('KSM004_100')}</button>
    			
 		</div>
 		
