--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/c/index.xhtml
@@ -23,13 +23,13 @@
             </div>
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="C1_3" data-bind="click: openScreenJ, enable: $root.errors.isEmpty() &amp;&amp; enableAddHisButton()">#{i18n.getText('QMM020_13')}</button>
+                    <button id="C1_3" tabindex="5" data-bind="click: openScreenJ, enable: $root.errors.isEmpty() &amp;&amp; enableAddHisButton()">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="C1_4" data-bind="click: openScreenK, enable: $root.errors.isEmpty() &amp;&amp; enableEditHisButton()" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="C1_4" tabindex="6" data-bind="click: openScreenK, enable: $root.errors.isEmpty() &amp;&amp; enableEditHisButton()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
-                    <table  id="C1_5"  data-bind="ntsGridList: {
+                    <table  id="C1_5" tabindex="7" data-bind="ntsGridList: {
                                             height: 250,
                                             name: '#{i18n.getText('QMM020_23')}',
                                             dataSource: listStateCorrelationHis,
