--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
@@ -134,7 +134,7 @@
                                         required: true}" />
                                 </div>
                             </div>
-                            <div style="margin-top: 10px; " data-bind = "if: formulaType() == 0">
+                            <div style="margin-top: 10px; " data-bind = "if: formulaType() != 0">
                                 <!--E4_1-->
                                 <div style="width: 110px; display: inline-block;"
                                      data-bind="ntsFormLabel: {required: true, constraint: 'PremiumRate'}">#{i18n.getText('QMM017_113')}</div>
@@ -152,7 +152,7 @@
                                         required: true}" />
                                 </div>
                             </div>
-                            <div style="margin-top: 10px;" data-bind = "if: formulaType() == 0">
+                            <div style="margin-top: 10px;" data-bind = "if: formulaType() != 0">
                                 <!--E5_1-->
                                 <div style="width: 110px; display: inline-block;"
                                      data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_115')}</div>
@@ -247,7 +247,7 @@
         <div id="functions-area-bottom">
             <button tabindex="99" class="x-large proceed "
                     data-bind="click: saveConfiguration, enable: $root.errors.isEmpty">#{i18n.getText('QMM017_153')}</button>
-            <button tabindex="99" class="large" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
+            <button tabindex="99" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
         </div>
     </ui:define>
 </ui:composition>
