--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
@@ -92,7 +92,7 @@
         <div id="functions-area-bottom">
             <button tabindex ="5" class="x-large proceed "
                     data-bind="click: addNewHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM017_153')}</button>
-            <button tabindex ="6" class="large" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
+            <button tabindex ="6" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
         </div>
     </ui:define>
 </ui:composition>
