--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/i/index.xhtml
@@ -60,7 +60,7 @@
 		<div id="functions-area-bottom">
 			<button tabindex="3" class="x-large proceed "
 					data-bind="click: editHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM017_153')}</button>
-			<button tabindex="4" class="large" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
+			<button tabindex="4" data-bind="click: cancel">#{i18n.getText('QMM017_104')}</button>
 		</div>
 	</ui:define>
 </ui:composition>
