--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -21,6 +21,7 @@
                     <table  id="F1_5" tabindex="4" data-bind="ntsGridList: {
                                             name: '#QMM020_37',
                                             height: 165,
+                                            rows:6,
                                             dataSource: listStateCorrelationHisPosition,
                                             primaryKey: 'hisId',
                                             columns: [
