--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -29,6 +29,7 @@
                 <div style="margin-top: 10px">
                     <table  id="G1_5" tabindex="7" data-bind="ntsGridList: {
                                             height: 165,
+                                            rows:6,
                                             dataSource: listStateCorrelationHisSalary,
                                             primaryKey: 'hisId',
                                             columns: [
