--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -37,6 +37,7 @@
                 <div style="margin-top: 10px">
                     <table  id="H1_5"  data-bind="ntsGridList: {
                                             height: 165,
+                                            rows:6,
                                             dataSource: listStateCorrelationHis,
                                             primaryKey: 'hisId',
                                             columns: [
