--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -33,6 +33,7 @@
                                 <div style="margin-top: 10px">
                                         <table  id="B1_5"  tabindex="7" data-bind="ntsGridList: {
                                             height: 165,
+                                            rows:6,
                                             name: '#{i18n.getText('QMM020_14')}',
                                             dataSource: listStateCorrelationHis,
                                             primaryKey: 'hisId',
