--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
@@ -32,6 +32,7 @@
                 <div style="margin-top: 10px">
                     <table  id="D1_5" tabindex="7" data-bind="ntsGridList: {
                                             height: 165,
+                                            rows:6,
                                             dataSource: listStateCorrelationHis,
                                             primaryKey: 'hisId',
                                             columns: [
