--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/qmm020.e.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/qmm020.e.style.css
@@ -37,10 +37,10 @@
     z-index: 1;
     margin: -14px -11px;
 }
-#E1_5_container {
+/*#E1_5_container {
     margin: 15px 0px 0px 0px !important;
 }
-
+*/
 #E3_1_virtualContainer {
     border: 1px solid #AAB7B8;
 }
