--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/kmf002.d.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/kmf002.d.main.css
@@ -41,3 +41,7 @@
 #scrD .caret-right.caret-background.bg-green{
 	width: 377px !important;
 }
+#opencdl028Dialog {
+	margin-left: 60px;
+	margin-top: 8px;
+}
