--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/b/kmf002.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/b/kmf002.b.main.css
@@ -36,3 +36,7 @@
 #scrB #tableCommonMonth table thead tr th:nth-child(1) {
 	width: 60px;
 }
+#opencdl028Dialog {
+	margin-left: 60px;
+	margin-top: 8px;
+}
