--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/kmf002.c.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/kmf002.c.main.css
@@ -22,6 +22,10 @@
 	padding-left:120px;
 	padding-right: 120px;
 }
+#opencdl028Dialog {
+	margin-left: 60px;
+	margin-top: 8px;
+}
 
 #scrC #includeTableMonthlyDay > div:nth-child(2) {
 	padding-top: 20px;
