QMM017 fix bugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/a.xhtml
@@ -36,7 +36,7 @@
                        data-bind="ntsTreeGridView:{
                                 name: '#[QMM017_13]',
                                 width: 270,
-                                rows: 15,
+                                rows: 12,
                                 dataSource: formulaList,
                                 value: selectedFormulaIdentifier,
                                 primaryKey: 'identifier',
@@ -97,7 +97,7 @@
                                         optionsText: 'name',
                                         value: settingMethod,
                                         required: true,
-                                        enable: $vm.isNewMode }"></div>
+                                        enable: $vm.isNewMode }"/>
                 </div>
                 <div class="tab-row">
                     <div class="column-2">
