--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -64,19 +64,19 @@
                         <button tabindex = "2" data-bind = "click: calculateInServer" style = "height: 80px; width: 80px;">#{i18n.getText('QMM017_53')}</button>
                     </div>
                     <div class="large-right-caret-container" style="display: inline-block; margin-left: 10px;">
-                        <span class="caret-right outline large-right-caret"></span>
+                        <span class="caret-right outline large-right-caret"/>
                     </div>
                     <div style = "display:inline-block; width: 180px; height: 80px; margin-left: 25px; vertical-align: middle" class="panel panel-frame tab-panel-col-3">
                         <div style="margin-top:5px;">#{i18n.getText('QMM017_144')}</div>
-                        <hr style="margin-top:15px;"></hr>
-                        <div data-bind="text: trialCalculationResult"></div>
+                        <hr style="margin-top:15px;"/>
+                        <div data-bind="text: trialCalculationResult"/>
                     </div>
                 </div>
                 <div style="margin-top: 10px; min-width: 550px;">
                     <div style="width: 130px; display: inline-block;" data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_45')}
                     </div>
                 </div>
-                    <hr style = "margin-right: 23px;"></hr>
+                    <hr style = "margin-right: 23px;"/>
                 <div style="margin-top: 10px; min-width: 550px;">
                     <div style="margin-top: 10px; min-width: 550px">
                         <div>
