--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -423,7 +423,7 @@
                 </div>
                 <div class = "row">#{i18n.getText('QMM017_56')}</div>
                 <div class = "row">#{i18n.getText('QMM017_57')}</div>
-                <div class = "row" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_58')}</div>
+                <div class = "row" data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_58')}</div>
                 <hr/>
                 <div class = "row">
                     <div style = "display: inline-block">#{i18n.getText('QMM017_59')}</div>
