QMM017 fix bugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
-                            <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
+                            <div style="margin-top:5px; margin-bottom: 15px">#{i18n.getText('QMM017_49')}</div>
                             <hr/>
                             <div class ="display-notes" data-bind="text: displayItemNote"/>
                         </div>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
-                            <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
+                            <div style="margin-top:5px; margin-bottom: 15px">#{i18n.getText('QMM017_49')}</div>
                             <hr/>
                             <div class ="display-notes" data-bind="text: displayUnitPriceItemNote"/>
                         </div>
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
-                            <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
+                            <div style="margin-top:5px; margin-bottom: 15px">#{i18n.getText('QMM017_49')}</div>
                             <hr/>
                             <div class ="display-notes" data-bind="text: displayFunctionNote"/>
                         </div>
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
-                            <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
+                            <div style="margin-top:5px; margin-bottom: 15px">#{i18n.getText('QMM017_49')}</div>
                             <hr/>
                             <div class ="display-notes" data-bind="text: displayVariableNote"/>
                         </div>
@@ -342,7 +342,7 @@
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
-                            <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
+                            <div style="margin-top:5px; margin-bottom: 15px">#{i18n.getText('QMM017_49')}</div>
                             <hr/>
                             <div class ="display-notes" data-bind="text: selectedWageTable().remarkInformation"/>
                         </div>
