--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
@@ -122,6 +122,7 @@
                                 <!--F3_24-->
                                 <input id="F3_24" tabindex="9" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_121]',
+                                    option: $vm.option,
                                     value: errorUpRangeValNum,
                                     enable: $vm.screenControl().enableF3_24(),
                                     constraint: 'TimesValue'}"/>
@@ -154,6 +155,7 @@
                                 <!--F3_25-->
                                 <input id="F3_25" tabindex="11" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_123]',
+                                    option: $vm.option,
                                     value: errorLoRangeValNum,
                                     enable: $vm.screenControl().enableF3_25(),
                                     constraint: 'TimesValue'}"/>
@@ -189,6 +191,7 @@
                                 <!--F3_26-->
                                 <input id="F3_26" tabindex="13" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_126]',
+                                    option: $vm.option,
                                     value: alarmUpRangeValNum,
                                     enable: $vm.screenControl().enableF3_26(),
                                     constraint: 'TimesValue'}"/>
@@ -221,6 +224,7 @@
                                 <!--F3_27-->
                                 <input id="F3_27" tabindex="15" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_128]',
+                                    option: $vm.option,
                                     value: alarmLoRangeValNum,
                                     enable: $vm.screenControl().enableF3_27(),
                                     constraint: 'TimesValue'}"/>
