--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -13,7 +13,7 @@
             <div data-bind="ntsPanel:{width: '200px', height: '220px', direction: 'right', showIcon: false, visible: true}">
 
                 <div>
-                    <button id="F1_3" tabindex="2" data-bind="click: openJScreen, timeClick: 800, enable: !enableNew() ">#{i18n.getText('QMM020_13')}</button>
+                    <button id="F1_3" tabindex="2" data-bind="click: openJScreen, timeClick: 800, enable: enableNew() ">#{i18n.getText('QMM020_13')}</button>
                     <button id="F1_4" tabindex="3" data-bind="click: openKScreen, timeClick: 800, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
