qmm003: fix bug

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
@@ -30,7 +30,7 @@
 					<!-- D1_4 -->
 					<div tabindex="1" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
 						targetKey: 'code', mode:'igTree', comId:'D2_1', items: items2, 
-						selected: selectedCodes, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+						selected: selectedCodes, selectedKey: 'code', childField: 'children', fields: ['name', 'searchCode']}" />
 				</div>
 				<!-- D2_1 -->
 				<table id="D2_1" tabindex="2"
