--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/e/index.xhtml
@@ -48,7 +48,7 @@
 								<!-- E2_3 -->
 								<div tabindex="2" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
 									targetKey: 'code', mode:'igTree', comId:'treegridsource', items: source, 
-									selected: sourceSelectedCodes, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+									selected: sourceSelectedCodes, selectedKey: 'code', childField: 'children', fields: ['name', 'searchCode']}" />
 							</div>
 							<!-- E2_4 -->
 							<table id="treegridsource" tabindex="3"
@@ -83,7 +83,7 @@
 								<!-- E3_3 -->
 								<div tabindex="4" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
 									targetKey: 'code', mode:'igTree', comId:'treegriddestination', items: destination, 
-									selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+									selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'searchCode']}" />
 							</div>
 							<!-- E3_4 -->
 							<table id="treegriddestination" tabindex="5"
