--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/c/index.xhtml
@@ -26,7 +26,7 @@
 					<!-- C1_3 -->
 					<div tabindex="1" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
 						targetKey: 'code', mode:'igTree', comId:'C2_1', items: items2, 
-						selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+						selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'searchCode']}" />
 				</div>
 				<!-- C2_1 -->
 				<table id="C2_1" tabindex="2"
