Update CPS003A - export Excel

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -27,7 +27,7 @@
 			<div id="functions-area">
 				<button type="button" class="proceed" data-bind="click: $vm.register" tabindex="1">#{i18n.getText('CPS003_7')}</button>
 				<button type="button" data-bind="click: $vm.checkError" tabindex="2">#{i18n.getText('CPS003_8')}</button>
-				<button type="button" class="danger" data-bind="" tabindex="3">#{i18n.getText('CPS003_9')}</button>
+				<button type="button" class="danger" data-bind="click: exportFile" tabindex="3">#{i18n.getText('CPS003_9')}</button>
 				<button type="button" data-bind="click: openBDialog" tabindex="3">#{i18n.getText('CPS003_10')}</button>
 			</div>
 			<div id="contents-area" class="cf"
