--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
@@ -20,7 +20,7 @@
 				 -->
 				<div tabindex="-1" id="contents-area" class="fixed-flex-layout">
 			<div>
-				<div style="margin-left: 34px">
+				<div style="margin-left: 34px;margin-bottom:10px;">
 				<button id="print-button"  tabindex="1" data-bind="click: opencdl028Dialog">#{i18n.getText('KMK007_4')}</button>
 				</div>
 				  
@@ -35,7 +35,7 @@
 				</div>	
 					<span tabindex="-1" class="master_setting_caret caret-right"></span>
 					
-					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px; height: 325px;margin-top: 35px">
+					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px; height: 325px;margin-top: 44px">
 						<div tabindex="-1" class="master_title_right">
 							<label tabindex="-1" class="label_master">#{i18n.getText('KMK011_45')}</label>
 						</div>
