--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
@@ -3,7 +3,7 @@
     <div class="sidebar-content-header" style = "min-width: 800px;">
         <span class = "title" style="margin-left: 4px;">#{i18n.getText('QMM020_2')}</span>
     </div>
-    <div style="margin-top: 15px;margin-bottom: 20px; min-width: 1000px;" class="contents" >
+    <div style="margin-top: 15px;margin-bottom: 20px;height: 480px; min-width: 1000px;" class="contents" >
             <div id="com-ccg001_2"> </div>
             <div id="fixed-flex-layout-right" style="margin-left: 90px; ">
                 <div class="table">
@@ -32,7 +32,7 @@
                 <table id="grid" tabindex="2" />
             </div>
         </div>
-    <div id="functions-area-bottom" style=" margin-top: 25px; width: 1145px;height:45px;">
+    <div id="functions-area-bottom" style=" margin-top: 25px; width: 1125px;height:45px;position:static">
         <button tabindex="3"
                 data-bind="click: cancel, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_52')}</button>
     </div>
