--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -20,7 +20,7 @@
             <div style="margin-left: 20px">
                 <div style="min-width: 550px">
                     <div style="width: 130px; margin-top: 20px; display: inline-block;"
-                         data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_142')}</div>
+                         data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_142')}</div>
                 </div>
                 <div style="min-width: 680px; margin-top: 10px;">
                     <div style = "display: inline-block; vertical-align: middle">
@@ -33,8 +33,8 @@
                                 <thead>
                                 <tr>
                                     <th class="ui-widget-header"
-                                        rowspan="4" id="E3_2">#{i18n.getText('QMM008_145')}</th>
-                                    <th class="ui-widget-header">#{i18n.getText('QMM008_146')}</th>
+                                        rowspan="4" id="E3_2">#{i18n.getText('QMM017_18')}</th>
+                                    <th class="ui-widget-header">#{i18n.getText('QMM017_24')}</th>
                                 </tr>
 
                                 </thead>
@@ -69,7 +69,7 @@
                     <div style = "display:inline-block; width: 180px; height: 80px; margin-left: 25px; vertical-align: middle" class="panel panel-frame tab-panel-col-3">
                         <div style="margin-top:5px;">#{i18n.getText('QMM017_144')}</div>
                         <hr style="margin-top:15px;"/>
-                        <div data-bind="text: trialCalculationResult"/>
+                        <div data-bind="text: trialCalculationResult" style="text-align: right"/>
                     </div>
                 </div>
                 <div style="margin-top: 10px; min-width: 550px;">
