--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
@@ -135,11 +135,13 @@
                             value: currencyValue,
                             constraint: 'SalaryUnitPrice',
                             required: true,
-                            option: {
-                                decimallength: 2
-                                },
                             name: '#[QMM041_18]',
-                            enable: currencyEnable
+                            enable: currencyEnable,
+                            option: {
+                                grouplength: 3,
+                                decimallength: 2,
+                                currencyformat: 'JPY'
+                                }
                             }"
                         />
                     </div>
