--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -12,7 +12,7 @@
                     data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
 
     </div>
-    <div style="margin-top: 15px; min-width: 1000px;" class="contents-area " >
+    <div style="margin-top: 15px; min-width: 1000px;" class="contents-area" id ="H_CCG" >
         <div id="com-ccg001"></div>
         <div id = "H1_1" style="margin-left: 70px; ">
             <div  tabindex = "6" id="emp-component" style="margin-left: 10px;"></div>
