--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
@@ -107,7 +107,9 @@
         </com:ko-if>
         <com:ko-if bind="$vm.viewmodelA.individualUse() === 1">
             <div id="tabpanel-3" role="tabpanel" data-bind="with: viewmodelH">
+                <com:ko-if bind="$vm.viewmodelA.selectedH() == 1">
                 <ui:include src="../h/index.xhtml"/>
+                </com:ko-if>
             </div>
         </com:ko-if>
         <div id="tabpanel-4" role="tabpanel" data-bind="with: viewmodelI">
