--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 430, height: 660 };</script>
+			<script>var dialogSize = { width: 510, height: 660 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../share/constants.js"/>
 			<com:scriptfile path="qmm003.d.service.js" />
@@ -24,7 +24,7 @@
 					<!-- D1_2 -->
 					<span class="label">#{i18n.getText('QMM003_28')}</span>
 				</div>
-				<div class="valign-center control-group" style="width: 400px">
+				<div class="valign-center control-group cf" style="width: 400px; margin-left: 45px; margin-bottom: 0px">
 					<!-- D1_3 -->
 					<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
 					<!-- D1_4 -->
@@ -36,7 +36,7 @@
 				<table id="D2_1" tabindex="2"
 					data-bind="ntsTreeGridView:{
 						width: 400,
-						rows: 13,
+						rows: 15,
 						name: '#[QMM003_8]',
 						dataSource: items2,
 						selectedValues: selectedCodes,
@@ -55,7 +55,7 @@
 				<button tabindex="4" data-bind="click: cancel, timeClick: 500">#{i18n.getText('QMM003_25')}</button>
 			</div>
 			<style>
-				#D2_1_container{clear: both}
+				#D2_1_container{clear: both; margin-left: 45px}
 			</style>
 		</ui:define>
 	</ui:composition>
